# ExampleCPlusPlus

./: .gitignore  ExampleCPlusPlus.sln
Containers/: CMakeLists.txt
Containers/inc/Containers/: BinaryTree.h  HashMap.h  Heap.h  LinkedList.h  Stack.h  Stack.inl  Vector.h
Containers/src/: keep.cpp
Containers/test/: CMakeLists.txt
Containers/test/src/: TestBinaryTree.cpp  TestHashMap.cpp  TestHeap.cpp  TestLinkedList.cpp  TestStack.cpp  TestVector.cpp  main.cpp
DesignPatterns/: CMakeLists.txt
DesignPatterns/inc/DesignPatterns/AbstractFactory/: GuiApplication.h  IButton.h  IWindow.h  MacGUIFactory.h  MacWindow.h  PcGUIFactory.h  WindowsButton.h  WindowsWindow.h
DesignPatterns/inc/DesignPatterns/Command/: MoveObjectCommand.h
DesignPatterns/inc/DesignPatterns/EntityComponent/: Entity.h
DesignPatterns/inc/DesignPatterns/Observer/: IObserver.h  Subject.h
DesignPatterns/inc/DesignPatterns/Observer/FlexibleSubject/: FlexibleSubject.h
DesignPatterns/inc/DesignPatterns/Singleton/AdvancedManagedSingleton/: ManagedSingleton.h  SingletonManager.h
DesignPatterns/inc/DesignPatterns/Singleton/BasicSoundSingleton/: BasicSoundSingleton.h
DesignPatterns/inc/DesignPatterns/Singleton/SingletonAsServices/: ExtendedSoundServiceSingleton.h  SingletonServiceManager.h
DesignPatterns/inc/DesignPatterns/State/BasicState/: IBasicState.h
DesignPatterns/inc/DesignPatterns/State/StateStack/: StateStack.cpp
DesignPatterns/src/DesignPatterns/AbstractFactory/: GuiApplication.cpp
DesignPatterns/src/DesignPatterns/Command/: CommandCoordinator.cpp
DesignPatterns/src/DesignPatterns/EntityComponent/: Entity.cpp
DesignPatterns/src/DesignPatterns/Observer/: Subject.cpp
DesignPatterns/src/DesignPatterns/Observer/FlexibleSubject/: ConcreteFlexibleObserver.cpp  FlexibleSubject.cpp
DesignPatterns/src/DesignPatterns/Singleton/AdvancedManagedSingleton/: AdvancedSoundSingleton.cpp
DesignPatterns/src/DesignPatterns/Singleton/BasicSoundSingleton/: BasicSoundSingleton.cpp
DesignPatterns/src/DesignPatterns/Singleton/SingletonAsServices/: SingletonServiceManager.cpp  SoundServiceSingleton.cpp
DesignPatterns/src/DesignPatterns/State/BasicState/: BasicStateMachine.cpp
DesignPatterns/test/: CMakeLists.txt
DesignPatterns/test/inc/test/: TestCommon.h
DesignPatterns/test/inc/test/mock/: MockGUIFactory.h
DesignPatterns/test/src/: TestGuiApplication.cpp
ExampleCPlusPlus/: ExampleCPlusPlus.vcxproj  ExampleCPlusPlus.vcxproj.filters  ReadMe.txt
ExampleCPlusPlus/DesignPatterns/AbstractFactory/: GuiApplication.cpp  IAbstractGUIFactory.h  MacButton.h
ExampleCPlusPlus/DesignPatterns/Command/: CommandCoordinator.cpp  CommandCoordinator.h  ICommand.h  MoveableObject.h
ExampleCPlusPlus/DesignPatterns/EntityComponent/: Component.h  Entity.cpp  Entity.h  stdafx.h
ExampleCPlusPlus/DesignPatterns/Observer/: Subject.cpp  Subject.h
ExampleCPlusPlus/DesignPatterns/Observer/FlexibleSubject/: ConcreteFlexibleObserver.cpp  ConcreteFlexibleObserver.h  FlexibleSubject.cpp  IFlexibleObserver.h
ExampleCPlusPlus/DesignPatterns/Singleton/AdvancedManagedSingleton/: AdvancedSoundSingleton.h  IManagedSingleton.h
ExampleCPlusPlus/DesignPatterns/Singleton/BasicSoundSingleton/: BasicSoundSingleton.cpp
ExampleCPlusPlus/DesignPatterns/Singleton/SingletonsAsServices/: IServiceSingleton.h  ISoundServiceSingleton.h  SingletonServiceManager.h  SoundServiceSingleton.cpp  SoundServiceSingleton.h
ExampleCPlusPlus/DesignPatterns/State/BasicState/: BasicStateMachine.cpp  MouseDraggingState.h  MouseScrollState.h  basicstatemachine.h
ExampleCPlusPlus/DesignPatterns/State/StateStack/: IStackedState.h  MainMenuState.h  MapState.h  StateStack.h
ExampleCPlusPlus/Release/ExampleCPlusPlus.tlog/: CL.read.1.tlog  CL.write.1.tlog  ExampleCPlusPlus.lastbuildstate  Lib-link.read.1.tlog  Lib-link.write.1.tlog  cl.command.1.tlog  lib.command.1.tlog
ExampleTests/: ExampleTests.cpp  ExampleTests.vcxproj  main.cpp  stdafx.cpp
ExampleTests/Release/ExampleTests.tlog/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
ExceptionSafety/: CMakeLists.txt  README.md
ExceptionSafety/inc/ExceptionSafety/: Jigsaw.h
ExceptionSafety/src/: Jigsaw.cpp
ExceptionSafety/test/: CMakeLists.txt
ExceptionSafety/test/src/: TestJigsaw.cpp
Release/: ExampleCPlusPlus.lib
ipch/examplecplusplus-5fdc1ea2/: examplecplusplus-8d526683.ipch
